--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.android.support:support-v4:2.1.6'
+    compile 'cn.bingoogolapple:bga-banner:2.1.6@aar'
 }
