--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.soldiersoul.wutu"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          android:versionCode="1000"
-          android:versionName="1.0.0.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.soldiersoul.wutu"
+    android:versionCode="1000"
+    android:versionName="1.0.0.0">
 
     <application
         android:allowBackup="true"
@@ -12,9 +12,16 @@
         android:theme="@style/AppTheme">
         <activity android:name=".home.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".home.MilitaryWorldActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
