--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:support-v4:2.1.6'
     compile 'cn.bingoogolapple:bga-banner:2.1.6@aar'
+    compile 'com.maksim88:PasswordEditText:v0.9'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
