--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".home.MainActivity">
+        <activity
+            android:name=".home.MainActivity"
+            android:launchMode="singleTask">
         </activity>
         <activity android:name=".login.LoginActivity">
             <intent-filter>
@@ -19,7 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".home.MilitaryWorldActivity">
+        <activity android:name=".military.MilitaryWorldActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -28,8 +30,9 @@
         </activity>
         <activity android:name=".login.GuideActivity">
         </activity>
-        <activity
-            android:name=".register.RegisterActivity">
+        <activity android:name=".register.RegisterActivity">
+        </activity>
+        <activity android:name=".login.PerfectInfoActivity">
         </activity>
     </application>
 
