--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".home.MilitaryWorldActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".login.LoginActivity">
         </activity>
-        <activity android:name=".military.MilitaryWorldActivity">
+        <activity android:name=".military.MilitaryWorldActivity"
+            >
         </activity>
         <activity android:name=".login.GuideActivity">
         </activity>
