加入轮播图效果，修改军事天地界面
加入轮播图效果，修改军事天地界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,17 @@
             android:name=".home.MainActivity"
             android:launchMode="singleTask"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        </activity>
+        <activity android:name=".login.LoginActivity">
+        </activity>
+        <activity android:name=".military.MilitaryWorldActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".login.LoginActivity">
-        </activity>
-        <activity android:name=".military.MilitaryWorldActivity"
-            >
         </activity>
         <activity android:name=".login.GuideActivity">
         </activity>
