--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,5 @@ dependencies {
     //轮播图依赖
     compile 'cn.bingoogolapple:bga-banner:2.1.6@aar'
     compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.android.support:support-v4:25.1.0'
+//    compile 'com.android.support:support-v4:25.1.0'
 }
