--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    /*配置libs目录*/
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
@@ -40,3 +47,4 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.0'
 //    compile 'com.android.support:support-v4:25.1.0'
 }
+
