--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <!-- 访问网络，网络定位需要上网-->
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <!-- SD卡读取权限，用户写入离线定位数据-->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
 
@@ -35,7 +35,7 @@
         <!--百度定位AK-->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="0aNpINA7cG8I0IlRzA0kXBjXZ8Dllm5B" />
+            android:value="0aNpINA7cG8I0IlRzA0kXBjXZ8Dllm5B"/>
 
         <activity
             android:name=".home.MainActivity"
@@ -55,11 +55,16 @@
         </activity>
         <activity android:name=".login.PerfectInfoActivity">
         </activity>
-        <activity android:name=".society.LocationActivity">
+        <activity
+            android:name=".society.LocationActivity"
+            android:parentActivityName=".home.MainActivity">
         </activity>
 
         <!--百度定位Server-->
-        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote">
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote">
         </service>
 
     </application>
