--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 
     compile 'com.github.crosswall:Android-Coverflow:release-v1.0.4'
 
-
+    //FlycoTabLayout
+    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 }
 
