--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,7 @@ dependencies {
 
     //FlycoTabLayout
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+    //LazyRecyclerView
+    compile 'com.github.CarGuo:LazyRecyclerAdapter:v2.0.0'
 }
 
