--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     //轮播图依赖
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -45,6 +44,7 @@ dependencies {
     compile 'com.github.crosswall:Android-Coverflow:release-v1.0.4'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.github.CarGuo:LazyRecyclerAdapter:v2.0.0'
+    compile 'com.android.support:cardview-v7:23.2.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
