--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     //LazyRecyclerView
     compile 'com.github.CarGuo:LazyRecyclerAdapter:v2.0.0'
+    //省份列表
+    compile 'cn.ittiger:indexstickyview:1.1.0'
 }
 
