--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.soldiersoul.wutu"
-    android:versionCode="1000"
-    android:versionName="1.0.0.0">
+<manifest package="com.soldiersoul.wutu"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+          android:versionCode="1000"
+          android:versionName="1.0.0.0">
 
     <!-- 这个权限用于进行网络定位 -->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <!-- 这个权限用于访问GPS定位 -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <!-- 用于读取手机当前的状态 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!-- 访问网络，网络定位需要上网 -->
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <!-- SD卡读取权限，用户写入离线定位数据 -->
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <application
@@ -35,43 +34,45 @@
         <!-- 百度定位AK -->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="0aNpINA7cG8I0IlRzA0kXBjXZ8Dllm5B" />
+            android:value="0aNpINA7cG8I0IlRzA0kXBjXZ8Dllm5B"/>
 
         <activity
             android:name=".home.MainActivity"
             android:launchMode="singleTask"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".login.LoginActivity" />
-        <activity android:name=".login.GuideActivity" />
-        <activity android:name=".register.RegisterActivity" />
-        <activity android:name=".login.PerfectInfoActivity" />
+        <activity android:name=".login.LoginActivity"/>
+        <activity android:name=".login.GuideActivity"/>
+        <activity android:name=".register.RegisterActivity"/>
+        <activity android:name=".login.PerfectInfoActivity"/>
         <activity
             android:name=".society.LocationActivity"
-            android:parentActivityName=".home.MainActivity" />
+            android:parentActivityName=".home.MainActivity"/>
 
         <!-- 百度定位Server -->
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote" />
+            android:process=":remote"/>
 
-        <activity android:name=".society.SocietyActActivity" />
-        <activity android:name=".society.HonorActivity" />
-        <activity android:name=".society.PhotoActivity" />
-        <activity android:name=".society.MemberActivity" />
-        <activity android:name=".society.TrainActivity" />
-        <activity android:name=".society.ContributeActivity" />
-        <activity android:name=".society.IntegralActivity" />
-        <activity android:name=".military.MadActivity" />
-        <activity android:name=".military.MpolicyActivity" />
-        <activity android:name=".military.McityActivity" />
-        <activity android:name=".military.CityContentActivity"></activity>
+        <activity android:name=".society.SocietyActActivity"/>
+        <activity android:name=".society.HonorActivity"/>
+        <activity android:name=".society.PhotoActivity"/>
+        <activity android:name=".society.MemberActivity"/>
+        <activity android:name=".society.TrainActivity"/>
+        <activity android:name=".society.ContributeActivity"/>
+        <activity android:name=".society.IntegralActivity"/>
+        <activity android:name=".military.MadActivity"/>
+        <activity android:name=".military.MpolicyActivity"/>
+        <activity android:name=".military.McityActivity"/>
+        <activity android:name=".military.CityContentActivity"/>
+        <activity android:name=".weapon.ShowWeaponActivity">
+        </activity>
     </application>
 
 </manifest>
