--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'cn.ittiger:indexstickyview:1.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.github.baoyachi:StepView:1.9'
 }
 
 
