--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "com.soldiersoul.wutu"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -51,6 +51,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.baoyachi:StepView:1.9'
+    //视频小窗口依赖
+    compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.0'
 }
 
 
