--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- SD卡读取权限，用户写入离线定位数据 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
-
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -67,7 +66,8 @@
         <activity android:name=".military.MadActivity" />
         <activity android:name=".military.MpolicyActivity" />
         <activity android:name=".military.McityActivity" />
-        <activity android:name=".military.CityContentActivity"></activity>
+        <activity android:name=".military.CityContentActivity" />
+        <activity android:name=".military.VideoListActivity"></activity>
     </application>
 
 </manifest>
