--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //轮播图依赖
+    //视频小窗口依赖
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.volley:volley:1.0.0'
@@ -45,15 +46,16 @@ dependencies {
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.github.CarGuo:LazyRecyclerAdapter:v2.0.0'
     compile 'com.android.support:cardview-v7:23.2.1'
-    testCompile 'junit:junit:4.12'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'cn.ittiger:indexstickyview:1.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.vipulasri:timelineview:1.0.4'
-    //视频小窗口依赖
     compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.0'
+    compile 'com.android.support.constraint:constraint-layout:+'
+    testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
+
 
 
 
