--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest package="com.soldiersoul.wutu"
           xmlns:android="http://schemas.android.com/apk/res/android"
           android:versionCode="1000"
-          android:versionName="1.0.0.0">
+          android:versionName="1.0.0">
 
     <!-- 这个权限用于进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -30,6 +30,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".home.WutuApplication"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
