用户界面一些小修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,8 @@
             android:name=".more.UserInfoAct"
             android:parentActivityName=".home.MainActivity">
         </activity>
+        <activity android:name=".more.ChangeAvatarAct">
+        </activity>
     </application>
 
 </manifest>
