--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.github.vipulasri:timelineview:1.0.4'
     compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.0'
     compile 'com.android.support.constraint:constraint-layout:+'
+    compile "com.lijunguan:imageseletor:1.0.2"
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
