--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
         <activity android:name=".military.VideoListActivity"/>
         <activity android:name=".more.UserInfoAct"/>
         <activity android:name=".more.ChangeAvatarAct"/>
+        <activity android:name=".weapon.ShowWeaponActivity"/>
     </application>
 
 </manifest>
