--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 
     //视频小窗口依赖
     apply plugin: 'com.android.application'
+    compile files('libs/json-lib-2.4-jdk15.jar')
     compile 'cn.bmob.android:bmob-sdk:3.5.1'
     compile 'cn.bmob.android:bmob-sms:1.0.1'
     compile 'cn.bmob.android:http-legacy:1.0'
@@ -57,12 +58,13 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.vipulasri:timelineview:1.0.4'
     compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.0'
-    compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.lijunguan:imageseletor:1.0.2'
+    compile 'com.github.jd-alexander:LikeButton:0.2.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile files('libs/json-lib-2.4-jdk15.jar')
 }
+
 
 
 
