完成社团任务模块，修改空布局，任务详情界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,6 +82,8 @@
         <activity android:name=".weapon.ShowWeaponActivity"/>
         <activity android:name=".weapon.WeaponDetailActivity">
         </activity>
+        <activity android:name=".society.SocietyIntegralDetailAct">
+        </activity>
     </application>
 
 </manifest>
