--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion '25.0.2'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.soldiersoul.wutu"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -38,12 +38,12 @@ dependencies {
     apply plugin: 'com.android.application'
     compile files('libs/json-lib-2.4-jdk15.jar')
     compile 'cn.bmob.android:bmob-sdk:3.5.1'
+    compile 'fm.jiecao:jiecaovideoplayer:5.5.4'
     compile 'cn.bmob.android:bmob-sms:1.0.1'
     compile 'cn.bmob.android:http-legacy:1.0'
-    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:support-v4:24.2.1'
     compile 'com.maksim88:PasswordEditText:v0.9'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.0.0'
@@ -52,7 +52,7 @@ dependencies {
     compile 'com.github.crosswall:Android-Coverflow:release-v1.0.4'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
     compile 'com.github.CarGuo:LazyRecyclerAdapter:v2.0.0'
-    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
     compile 'cn.ittiger:indexstickyview:1.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.google.code.gson:gson:2.8.0'
