--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     compile 'com.github.CarGuo:GSYVideoPlayer:v1.6.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.lijunguan:imageseletor:1.0.2'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
     compile 'com.github.jd-alexander:LikeButton:0.2.0'
     compile 'com.wang.avi:library:2.1.3'
     testCompile 'junit:junit:4.12'
