添加修改密码功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,6 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity android:name=".login.LoginActivity">
-
         </activity>
         <activity
             android:name=".login.GuideActivity"
@@ -64,7 +63,6 @@
         </activity>
         <activity android:name=".register.RegisterActivity"/>
         <activity android:name=".login.PerfectInfoActivity"/>
-
         <activity android:name=".society.HonorActivity"/>
         <activity android:name=".society.PhotoActivity"/>
         <activity android:name=".society.SocietyActDetailActivity"/>
@@ -84,6 +82,8 @@
             android:name=".military.VideoPlayerAct"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".login.FindPwdAct">
         </activity>
     </application>
 
