--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
     <application
         android:name=".home.WutuApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -86,6 +86,8 @@
         <activity android:name=".login.FindPwdAct">
         </activity>
         <activity android:name=".more.AboutAct">
+        </activity>
+        <activity android:name=".military.SearchNewsAct">
         </activity>
     </application>
 
